--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,7 +2,7 @@ services:
   auth:
     build: ./auth-service
     environment:
-      DB_HOST: postgres
+      DB_HOST: db
       DB_USER: myuser
       DB_PASSWORD: mypassword
       DB_NAME: db
@@ -22,7 +22,7 @@ services:
   product:
     build: ./product-service
     environment:
-      DB_HOST: postgres
+      DB_HOST: db
       DB_USER: myuser
       DB_PASSWORD: mypassword
       DB_NAME: db
@@ -31,6 +31,7 @@ services:
       - "5000:5000"
     depends_on:
       - db
+    restart: always
 
   db:
     image: postgres:16.11
@@ -40,3 +41,8 @@ services:
       POSTGRES_DB: db
     ports:
       - "5432:5432"
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U myuser -d db"]
+      interval: 5s
+      timeout: 5s
+      retries: 5
